--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waitlist Page</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-amber-50">
-    <div class="min-h-screen px-6 py-3">
-        <header>
-            <div>
+    <div class="min-h-screen px-6 py-3 flex flex-col gap-16">
+        <header class="flex justify-between">
+            <div class="flex items-center justify-center gap-2">
                 <img src="./Assets/Logo.svg" alt="">
+                <button class="bg-gradient-to-r from-orange-400 to-red-400 text-xs text-white px-2.5 py-1.5 rounded-2xl">Hosterr is hiring!</button>
+            </div>
+
+            <div>
+                
             </div>
         </header>
 
-        <main
+        <main>
+            
+        </main>
+
+        <footer>
+
+        </footer>
+    </div>
+</body>
+</html>
