--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <div>
-                
+                <i class="fa-solid fa-bars"></i>
             </div>
         </header>
 
