implement hero images

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,14 @@
         </header>
 
         <main>
-            
+            <div class="flex justify-center items-center">
+                <img src="./Assets/Blue Shape.svg" alt="" class="h-64 -rotate-45">
+                <img src="./Assets/Pink Shape.svg" alt="" class="absolute h-64 -rotate-[30deg]">
+                <img src="./Assets/Purple Shape.svg" alt="" class="absolute h-64 -rotate-[15deg]">
+                <img src="./Assets/Hero Image (Model).png" alt="" class="absolute h-64">
+            </div>
+
+          
         </main>
 
         <footer>
