--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
                 <img src="./Assets/Hero Image (Model).png" alt="" class="absolute h-64">
             </div>
 
-          
+            <div class="space-y-4 mt-16">
+                <h1 class="text-5xl font-bold leading-light font-lato ">Host your website in less than 5 minutes</h1>
+                
+            </div>
         </main>
 
         <footer>
