--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
 
             <div class="space-y-4 mt-16">
                 <h1 class="text-5xl font-bold leading-light font-lato ">Host your website in less than 5 minutes</h1>
-                
+                <p class="font-lato text-gray-400">With Hosterr, get your website up and running in no less than 5 minutes with the most competitive pricing packages</p>
+                >
             </div>
         </main>
 
