--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
             <div class="space-y-4 mt-16">
                 <h1 class="text-5xl font-bold leading-light font-lato ">Host your website in less than 5 minutes</h1>
                 <p class="font-lato text-gray-400">With Hosterr, get your website up and running in no less than 5 minutes with the most competitive pricing packages</p>
-                >
+                <form action="" class="flex flex-col gap-4">
+                    <input type="email" placeholder="Enter e-mail address" class="rounded-md px-4 py-3 placeholder:text-gray-400">
+                    
+                </form>
             </div>
         </main>
 
