implement form: button

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                 <p class="font-lato text-gray-400">With Hosterr, get your website up and running in no less than 5 minutes with the most competitive pricing packages</p>
                 <form action="" class="flex flex-col gap-4">
                     <input type="email" placeholder="Enter e-mail address" class="rounded-md px-4 py-3 placeholder:text-gray-400">
-                    
+                    <button class="bg-blue-500 rounded-md px-4 py-3 font-medium text-white font-lato">Join Waitlist</button>
                 </form>
             </div>
         </main>
