implement footer: help

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,13 @@
                 </li>
             </ul>
 
-            
+            <div class="flex gap-2">
+                <img src="./Assets/Help Avatar.svg" alt="">
+                <div>
+                    <p class="font-playfair font-thin">Have any quetions</p>
+                    <a class="font-lato font-medium">Talk to a specialist</a>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
