--- a/public/index.html
+++ b/public/index.html
@@ -8,32 +8,49 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-amber-50">
-    <div class="min-h-screen px-6 py-3 flex flex-col gap-16 md:px-10 md:py-7">
+    <div class="min-h-screen px-6 py-3 flex flex-col gap-16 md:px-10 md:py-7 lg:px-16">
         <header class="flex justify-between">
             <div class="flex items-center justify-center gap-2">
                 <img src="./Assets/Logo.svg" alt="">
                 <button class="bg-gradient-to-r from-orange-400 to-red-400 text-xs text-white px-2.5 py-1.5 rounded-2xl font-lato">Hosterr is hiring!</button>
             </div>
 
-            <div>
+            <ul class="hidden lg:flex justify-center items-center font-lato text-gray-400 gap-6">
+                <li>
+                    <a href="#">Plans</a>
+                </li>
+                <li>
+                    <a href="#">Domain</a>
+                </li>
+                <li>
+                    <a href="#">Why Hosterr</a>
+                </li>
+            </ul>
+
+            <div class="hidden lg:flex justify-center items-center font-lato gap-6">
+                <a href="#">Sign In</a>
+                <button class="btn">Join Waitlist</button>
+            </div>
+
+            <div class="lg:hidden">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
 
-        <main>
-            <div class="flex justify-center items-center">
-                <img src="./Assets/Blue Shape.svg" alt="" class="h-64 -rotate-45 md:h-72">
-                <img src="./Assets/Pink Shape.svg" alt="" class="absolute h-64 -rotate-[30deg] md:h-72"">
-                <img src="./Assets/Purple Shape.svg" alt="" class="absolute h-64 -rotate-[15deg] md:h-72"">
-                <img src="./Assets/Hero Image (Model).png" alt="" class="absolute h-64 md:h-72"">
+        <main class="lg:flex">
+            <div class="flex justify-center items-center lg:flex-1 lg:order-2 lg:justify-end">
+                <img src="./Assets/Blue Shape.svg" alt="" class="h-64 -rotate-45 md:h-72 lg:h-96">
+                <img src="./Assets/Pink Shape.svg" alt="" class="absolute h-64 -rotate-[30deg] md:h-72 lg:h-96">
+                <img src="./Assets/Purple Shape.svg" alt="" class="absolute h-64 -rotate-[15deg] md:h-72 lg:h-96">
+                <img src="./Assets/Hero Image (Model).png" alt="" class="absolute h-64 md:h-72 lg:h-96">
             </div>
 
-            <div class="space-y-4 mt-16">
-                <h1 class="text-5xl font-bold leading-light font-lato ">Host your website in less than 5 minutes</h1>
+            <div class="space-y-4 mt-16 lg:flex-1">
+                <h1 class="text-5xl font-bold leading-light font-lato lg:order-1">Host your website in less than 5 minutes</h1>
                 <p class="font-lato text-gray-400">With Hosterr, get your website up and running in no less than 5 minutes with the most competitive pricing packages</p>
-                <form action="" class="flex flex-col gap-4">
+                <form action="" class="flex flex-col gap-4 md:flex-row">
                     <input type="email" placeholder="Enter e-mail address" class="rounded-md px-4 py-3 placeholder:text-gray-400">
-                    <button class="bg-blue-500 rounded-md px-4 py-3 font-medium text-white font-lato">Join Waitlist</button>
+                    <button class="btn">Join Waitlist</button>
                 </form>
 
                 <div class="flex gap-2">
