--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <title>Waitlist Page</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        * {
+            /* border: solid; */
+            overflow: hidden;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body class="bg-amber-50">
     <div class="min-h-screen px-6 py-3 flex flex-col gap-16 md:px-10 md:py-7 lg:px-16">
